# my-stock

./: README.md  crew_execution_log.txt  mas-the-plan.md  pyproject.toml
RESULTS/costco/: 01_company_research.md  02_fundamental_research.md  03_technical_research.md  04_industry_research.md  05_risk_research.md  06_decision_research.md  07_report_research.md
RESULTS/link823/: 01_company_research.md  02_fundamental_research.md  03_technical_research.md  04_industry_research.md  05_risk_research.md  06_decision_research.md  07_report_research.md
RESULTS/microsoft/: 01_company_research.md  02_fundamental_research.md  03_technical_research.md  04_industry_research.md  05_risk_research.md  06_decision_research.md  07_report_research.md
RESULTS/tesla/: 01_company_research.md  02_fundamental_research.md  03_technical_research.md  04_industry_research.md  05_risk_research.md  06_decision_research.md  07_report_research.md
src/my_stock/: crew(ori).py  crew.py  main(ori).py  main.py
src/my_stock/config/: agents.yaml  tasks.yaml
